<resources>
    <string name="app_name">Prayers</string>
    <string name="app_title">PRAYER TIME</string>
    <string name="str_fajr">Fajr</string>
    <string name="str_zhuhar">Zhuhar</string>
    <string name="str_sunrise">Sunrise</string>
    <string name="str_asar">Asar</string>
    <string name="str_maghrib">Maghrib</string>
    <string name="str_sunset">Sunset</string>
    <string name="str_isha">Isha</string>
    <string name="str_loading">--:-- AM</string>
    <string name="str_sahar">Sahar</string>
</resources>
