<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/background_dark"
        android:id="@+id/layout">
    <TextView
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.19999999"
            app:fontFamily="sans-serif-condensed-light" android:textSize="36sp" android:textColor="#f0f0f0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_date"
            app:fontFamily="sans-serif-condensed-light" android:textSize="18sp" android:textColor="#f0f0f0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/table" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/col_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/col_time" app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:text="@string/str_sahar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title_sahar"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>
            <TextView
                    android:text="@string/str_fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_title_fajr"
                    app:fontFamily="sans-serif-condensed-light" android:textSize="24sp" android:textColor="#f0f0f0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_sahar" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/str_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_title_sunrise"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_fajr"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:text="@string/str_zhuhar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_title_zhuhar"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_sunrise"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:text="@string/str_asar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_title_asar"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_zhuhar"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/str_maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title_maghrib" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_asar"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/str_isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title_isha"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_title_maghrib"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/col_time"
                app:layout_constraintStart_toEndOf="@+id/col_title" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_sahar"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_fajr"
                    app:fontFamily="sans-serif-condensed-light" android:textSize="24sp" android:textColor="#f0f0f0"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_sahar"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_sunrise"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_fajr" app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_zhuhar"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_sunrise"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_asar"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_zhuhar"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_maghrib"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_asar" app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/str_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txt_time_isha"
                    app:fontFamily="sans-serif-condensed-light"
                    android:textSize="24sp" android:textColor="#f0f0f0" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_time_maghrib"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>